// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test [TextArea] component Component [TextArea] matches DOM Snapshot 1`] = `
<div
  className="flex flex-col m-3"
>
  <div>
    <label
      className="block text-gray-700 text-md font-bold"
      htmlFor="overview"
    >
      Overview
    </label>
    <textarea
      className="h-48 shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline bg-gray-200"
      id="overview"
      name="overview"
      onChange={[MockFunction]}
      placeholder="Please enter Overview."
      value="Overview"
    />
  </div>
  <small
    className="p-1 text-white text-md rounded bg-red-600"
  >
    error
  </small>
</div>
`;

exports[`Test [TextArea] component Component [TextArea] with default value 1`] = `
<div
  className="flex flex-col m-3"
>
  <div>
    <label
      className="block text-gray-700 text-md font-bold"
    />
    <textarea
      className="h-48 shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline bg-gray-200"
      placeholder="Please enter something."
    />
  </div>
</div>
`;
